welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:11: error: type mismatch;
 found   : Unit
 required: Int
		if (V==false) {
                ^