welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var V=false
	if (nums!=0) {
		for (i <- nums) {
			if(value==nums(i)) {
				return i
				V=true
				} 	
				
		} 
		if (V==false) {
		return -1
			}
	}
	else {
		return -1
	}
}
